--- a/first_chart.html
+++ b/first_chart.html
@@ -10,7 +10,35 @@
 
 <h1>My first chart with Highcharts</h1>
 <!-- add the div and the code below this comment -->
+<div id="container" style="width:100%; height:400px;"></div>
 
+<script>
+$(function () { 
+    $('#container').highcharts({
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: 'Fruit Consumption'
+        },
+        xAxis: {
+            categories: ['Apples', 'Bananas', 'Oranges']
+        },
+        yAxis: {
+            title: {
+                text: 'Fruit eaten'
+            }
+        },
+        series: [{
+            name: 'Jane',
+            data: [1, 0, 4]
+        }, {
+            name: 'John',
+            data: [5, 7, 3]
+        }]
+    });
+});
+</script>
 
 </body>
 </html>
