--- a/first_chart.html
+++ b/first_chart.html
@@ -3,14 +3,43 @@
 <head>
         <meta charset="utf-8">
         <title>My first chart with Highcharts</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"> </script>
-        <script src="js/highcharts.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="http://code.highcharts.com/highcharts.js"></script>
+        <script src="js/themes/gray.js"></script>
 </head>
 <body>
 
 <h1>My first chart with Highcharts</h1>
 <!-- add the div and the code below this comment -->
-
-
+<div id="container" style="width:100%; height:400px;"></div>
+    
+<script>
+    $(function () { 
+    $('#container').highcharts({
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: 'Fruit Consumption'
+        },
+        xAxis: {
+            categories: ['Apples', 'Bananas', 'Oranges', 'Mangos']
+        },
+        yAxis: {
+            title: {
+                text: 'Fruit eaten'
+            }
+        },
+        series: [{
+            name: 'Ron',
+            data: [1, 0, 4, 6]
+        }, {
+            name: 'Hermione',
+            data: [5, 7, 3, 6]
+        }]
+    });
+});
+</script>
+    
 </body>
 </html>
